# insync

./: README.md
backend/: pyproject.toml  requirements.txt
backend/src/mysite/: main.py
frontend/static/: index.html
