[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "insync"
description = "InSync — friendship optimizer for uni students"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"
dependencies = [
  "fastapi",
  "sqlalchemy[asyncio]",
  "asyncpg",
  "passlib[bcrypt]",
  "python-jose[cryptography]",
  "python-multipart",
  "pydantic[email]",
]

[tool.setuptools.packages.find]
where = ["src"]